Increase memory for channel combination and use task attempt to increase memory for reruns

--- a/nextflow.config
+++ b/nextflow.config
@@ -182,17 +182,17 @@ profiles {
     small {
         process {
             withLabel: 'process_medium' {
-                memory = '24.GB'
+                memory = { 24.GB * task.attempt }
             }
             withLabel: 'process_high' {
-                memory = '36.GB'
+                memory = { 36.GB * task.attempt }
             }
             withLabel: 'process_single' {
-                memory = '36.GB'
+                memory = { 36.GB * task.attempt }
             }
             withLabel: 'process_multi' {
                 cpus   = 8
-                memory = '36.GB'
+                memory = { 36.GB * task.attempt }
             }
         }
     }
@@ -200,17 +200,17 @@ profiles {
     medium {
         process {
             withLabel: 'process_medium' {
-                memory = '48.GB'
+                memory = { 48.GB * task.attempt }
             }
             withLabel: 'process_high' {
-                memory = '72.GB'
+                memory = { 72.GB * task.attempt }
             }
             withLabel: 'process_single' {
-                memory = '72.GB'
+                memory = { 72.GB * task.attempt }
             }
             withLabel: 'process_multi' {
                 cpus   = 16
-                memory = '72.GB'
+                memory = { 72.GB * task.attempt }
             }
         }
     }
@@ -218,17 +218,17 @@ profiles {
     large {
         process {
             withLabel: 'process_medium' {
-                memory = '96.GB'
+                memory = { 96.GB * task.attempt }
             }
             withLabel: 'process_high' {
-                memory = '144.GB'
+                memory = { 144.GB * task.attempt }
             }
             withLabel: 'process_single' {
-                memory = '144.GB'
+                memory = { 144.GB * task.attempt }
             }
             withLabel: 'process_multi' {
                 cpus   = 32
-                memory = '72.GB'
+                memory = { 144.GB * task.attempt }
             }
         }
     }
