Make combine_method param work for both cellpose and mesmer segmentation

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,9 @@ params {
     // background subtraction options
     remove_markers               = 'TRITC,Cy5'
 
+    // combine channels options
+    combine_method               = 'prod'
+
     // sopa segmentation options
     technology                   = 'ome_tif'
     patch_width_pixel            = 3000
@@ -44,7 +47,6 @@ params {
     cellpose_pretrained_model    = null
 
     // mesmer options
-    mesmer_combine_method        = 'prod'
     mesmer_segmentation_level    = null
     mesmer_maxima_threshold      = 0.1
     mesmer_interior_threshold    = 0.3
@@ -308,6 +310,15 @@ process {
         }
     }
 
+    withName: 'COMBINECHANNELS' {
+        ext.args = {
+            [
+                params.containsKey('combine_method') && params.combine_method ?
+                    "--combine-method ${params.combine_method}" : null
+            ].findAll { it != null }.join(' ')
+        }
+    }
+
     withName: 'SOPA_SEGMENTATIONCELLPOSE' {
         ext.args = {
             [
@@ -326,8 +337,8 @@ process {
     withName: 'MESMERSEGMENT' {
         ext.args = {
             [
-                params.containsKey('mesmer_combine_method') && params.mesmer_combine_method ?
-                    "--combine-method ${params.mesmer_combine_method}" : '',
+                params.containsKey('combine_method') && params.combine_method ?
+                    "--combine-method ${params.combine_method}" : '',
                 params.containsKey('mesmer_segmentation_level') && params.mesmer_segmentation_level ?
                     "--segmentation-level ${params.mesmer_segmentation_level}" : '',
                 params.containsKey('mesmer_maxima_threshold') && params.mesmer_maxima_threshold ?
