--- a/nextflow.config
+++ b/nextflow.config
@@ -387,7 +387,7 @@ manifest {
     description     = """Cell segmentation and downstream analysis pipeline for the COMET and MIBI spatial platforms"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.0.0dev'
+    version         = '0.1.0'
     doi             = ''
 }
 
