Implement report generation into mesmer and sopa subworkflows

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,6 +61,9 @@ params {
     pixel_size_microns           = 0.28
     estimate_cell_boundary_dist  = 3
 
+    // report options
+    generate_report              = true
+
     // Config options
     config_profile_name          = null
     config_profile_description   = null
