Support for embedded report in latest spatialvis package

--- a/tower.yml
+++ b/tower.yml
@@ -1,3 +1,5 @@
 reports:
   samplesheet.csv:
     display: "Auto-created samplesheet with collated metadata and FASTQ paths"
+  "segmentationreport/*/*.html":
+    display: "Segmentation Report"
