Update cellmeasurement version with support for percentile calculation

--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,7 @@ params {
 
     // measurement options
     skip_measurements            = false
+    percentiles                  = '70,80,90,95,96,97,98,99'
     pixel_size_microns           = 0.28
     estimate_cell_boundary_dist  = 3
 
@@ -303,10 +304,12 @@ process {
         }
         ext.args = {
             [
-                params.containsKey('pixel_size_microns') && params.pixel_size_microns ?
-                    "--pixel-size-microns=${params.pixel_size_microns}" : null,
                 params.containsKey('skip_measurements') ?
                     (params.skip_measurements ? '--skip-measurements=true' : '--skip-measurements=false') : null,
+                params.containsKey('percentiles') && params.percentiles ?
+                    "--percentiles=${params.percentiles}" : null,
+                params.containsKey('pixel_size_microns') && params.pixel_size_microns ?
+                    "--pixel-size-microns=${params.pixel_size_microns}" : null,
                 params.containsKey('estimate_cell_boundary_dist') && params.estimate_cell_boundary_dist ?
                     "--estimate-cell-boundary-dist=${params.estimate_cell_boundary_dist}" : null
             ].findAll { it != null }.join(' ')
