--- a/conf/test.config
+++ b/conf/test.config
@@ -27,6 +27,7 @@ params {
     patch_width_pixel          = 250
     patch_overlap_pixel        = 20
     remove_markers             = 'TRITC'
+    skip_measurements          = false
     gradle_cache_dir           = '$HOME/.gradle'
 }
 
