--- a/modules/local/combinechannels/meta.yml
+++ b/modules/local/combinechannels/meta.yml
@@ -52,10 +52,10 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1' ]`
-      - "${prefix}_combined_channels.ome.tif":
+      - "${prefix}_combined_channels.tiff":
           type: file
           description: A 2-channel OME-TIFF with nuclear and combined membrane channels.
-          pattern: "{prefix}_combined_channels.ome.tif"
+          pattern: "{prefix}_combined_channels.tiff"
           ontologies:
             - edam: "http://edamontology.org/format_3727"
   - versions:
