Change pipeline name to sp_segment

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    WEHI-SODA-Hub/spatialproteomics Nextflow config file
+    WEHI-SODA-Hub/sp_segment Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -243,8 +243,8 @@ profiles {
 // Load nf-core custom profiles from different Institutions
 includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
-// Load WEHI-SODA-Hub/spatialproteomics custom profiles from different institutions.
-// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/spatialproteomics.config" : "/dev/null"
+// Load WEHI-SODA-Hub/sp_segment custom profiles from different institutions.
+// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/sp_segment.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
@@ -387,9 +387,9 @@ dag {
 }
 
 manifest {
-    name            = 'WEHI-SODA-Hub/spatialproteomics'
+    name            = 'WEHI-SODA-Hub/sp_segment'
     author          = """WEHI SODA Hub"""
-    homePage        = 'https://github.com/WEHI-SODA-Hub/spatialproteomics'
+    homePage        = 'https://github.com/WEHI-SODA-Hub/sp_segment'
     description     = """Cell segmentation and downstream analysis pipeline for the COMET and MIBI spatial platforms"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.2'
